--- a/node22.html
+++ b/node22.html
@@ -128,7 +128,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3529"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3531"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3540"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3542"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -150,7 +150,7 @@ to be done in practice, e.g. by a recursive descent parser.
 </UL>
 
 <P>
-Unlike CFGs, PEGs cannot be <SPAN ID="txt3258">ambiguous</SPAN>; 
+Unlike CFGs, PEGs cannot be <SPAN ID="txt3269">ambiguous</SPAN>; 
 <I>if a string parses, it has exactly
 one valid parse tree</I>. 
 
@@ -210,7 +210,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3533"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3544"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -292,7 +292,8 @@ Semantics</A>
 
 <P>
 The fundamental difference between context-free grammars and parsing
-expression grammars is that the PEG's choice operator is red ordered:
+expression grammars is that the PEG's choice operator is 
+<FONT COLOR="#ff0000"> ordered</FONT>:
 
 <P>
 
@@ -310,8 +311,37 @@ one parse tree from the possible parses.
 <LI>By carefully
 choosing the order in which the grammar alternatives are specified, a programmer has a great deal of control over which parse tree is selected.
 </LI>
-<LI>PEGs can violet look ahead into the
+<LI>PEGs can 
+<FONT COLOR="#ee82ee"> look ahead</FONT> into the
 input string without actually consuming it
+</LI>
+<LI>The and-predicate expression <SPAN CLASS="MATH"><IMG
+ WIDTH="27" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
+ SRC="img16.png"
+ ALT="$ \&amp;e$"></SPAN> invokes the sub-expression <SPAN CLASS="MATH"><IMG
+ WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img7.png"
+ ALT="$ e$"></SPAN>, 
+and then succeeds if <SPAN CLASS="MATH"><IMG
+ WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img7.png"
+ ALT="$ e$"></SPAN> succeeds and fails if <SPAN CLASS="MATH"><IMG
+ WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img7.png"
+ ALT="$ e$"></SPAN> fails, 
+but in either case never consumes any input.
+</LI>
+<LI>The not-predicate expression <SPAN CLASS="MATH"><IMG
+ WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
+ SRC="img17.png"
+ ALT="$ !e$"></SPAN> succeeds if <SPAN CLASS="MATH"><IMG
+ WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img7.png"
+ ALT="$ e$"></SPAN> 
+fails and fails if <SPAN CLASS="MATH"><IMG
+ WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
+ SRC="img7.png"
+ ALT="$ e$"></SPAN> succeeds, again consuming no input in either case.
 </LI>
 </OL>
 
