--- a/node22.html
+++ b/node22.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1046"
+<A NAME="tex2html1050"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1040"
+<A NAME="tex2html1044"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1034"
+<A NAME="tex2html1038"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1042"
+<A NAME="tex2html1046"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1048"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1047"
+<B> Sig:</B> <A NAME="tex2html1051"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1041"
+<B>Sup:</B> <A NAME="tex2html1045"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1035"
+<B> Ant:</B> <A NAME="tex2html1039"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Con:</B> 
-<A NAME="tex2html1042"
+<A NAME="tex2html1046"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1048"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -113,12 +113,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html1048"
+<LI><A NAME="tex2html1052"
   HREF="node22.html#SECTION04311000000000000000">Syntax</A>
-<LI><A NAME="tex2html1049"
+<LI><A NAME="tex2html1053"
   HREF="node22.html#SECTION04312000000000000000">Semantics</A>
-<LI><A NAME="tex2html1050"
-  HREF="node22.html#SECTION04313000000000000000">Referencias y Documentación</A>
+<LI><A NAME="tex2html1054"
+  HREF="node22.html#SECTION04313000000000000000">Implementing parsers from parsing expression grammars</A>
+<LI><A NAME="tex2html1055"
+  HREF="node22.html#SECTION04314000000000000000">Referencias y Documentación</A>
 </UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -128,7 +130,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3542"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3544"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3543"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3545"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -210,7 +212,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3546"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3547"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -348,6 +350,59 @@ fails and fails if <SPAN CLASS="MATH"><IMG
 <P>
 
 <H2><A NAME="SECTION04313000000000000000">
+Implementing parsers from parsing expression grammars</A>
+</H2>
+
+<P>
+Any parsing expression grammar can be converted directly into a recursive descent parser. 
+
+<P>
+Due to the unlimited lookahead capability that the grammar formalism
+provides, however, the resulting parser could exhibit exponential time
+performance in the worst case.
+
+<P>
+It is possible to obtain better performance for any parsing expression
+grammar by converting its recursive descent parser into a packrat parser,
+which always runs in linear time, at the cost of substantially greater
+storage space requirements. 
+
+<P>
+A packrat parser is a form of parser
+similar to a recursive descent parser in construction, except that
+during the parsing process it memoizes the intermediate results of all
+invocations of the mutually recursive parsing functions, ensuring that
+each parsing function is only invoked at most once at a given input
+position. 
+
+<P>
+Because of this memoization, a packrat parser has the ability
+to parse many context-free grammars and any parsing expression grammar
+(including some that do not represent context-free languages) in linear
+time. 
+
+<P>
+Examples of memoized recursive descent parsers are known from at
+least as early as 1993. 
+
+<P>
+Note that this analysis of the performance
+of a packrat parser assumes that enough memory is available to hold all
+of the memoized results; in practice, if there were not enough memory,
+some parsing functions might have to be invoked more than once at the
+same input position, and consequently the parser could take more than
+linear time.
+
+<P>
+It is also possible to build LL parsers and LR parsers from parsing
+expression grammars, with better worst-case performance than a recursive
+descent parser, but the unlimited lookahead capability of the grammar
+formalism is then lost. Therefore, not all languages that can be expressed
+using parsing expression grammars can be parsed by LL or LR parsers.
+
+<P>
+
+<H2><A NAME="SECTION04314000000000000000">
 Referencias y Documentación</A>
 </H2>
 
@@ -384,19 +439,19 @@ Véanse [<A
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1046"
+<A NAME="tex2html1050"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1040"
+<A NAME="tex2html1044"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1034"
+<A NAME="tex2html1038"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1042"
+<A NAME="tex2html1046"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1048"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -448,11 +503,11 @@ Véanse [<A
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1047"
+<B> Sig:</B> <A NAME="tex2html1051"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1041"
+<B>Sup:</B> <A NAME="tex2html1045"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1035"
+<B> Ant:</B> <A NAME="tex2html1039"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 </DIV>
 <!--End of Navigation Panel-->
