--- a/node22.html
+++ b/node22.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1050"
+<A NAME="tex2html1058"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1052"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1038"
+<A NAME="tex2html1046"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1046"
+<A NAME="tex2html1054"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1048"
+<A NAME="tex2html1056"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1051"
+<B> Sig:</B> <A NAME="tex2html1059"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1045"
+<B>Sup:</B> <A NAME="tex2html1053"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1039"
+<B> Ant:</B> <A NAME="tex2html1047"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Con:</B> 
-<A NAME="tex2html1046"
+<A NAME="tex2html1054"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1048"
+<A NAME="tex2html1056"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -113,14 +113,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html1052"
+<LI><A NAME="tex2html1060"
   HREF="node22.html#SECTION04311000000000000000">Syntax</A>
-<LI><A NAME="tex2html1053"
+<LI><A NAME="tex2html1061"
   HREF="node22.html#SECTION04312000000000000000">Semantics</A>
-<LI><A NAME="tex2html1054"
+<LI><A NAME="tex2html1062"
   HREF="node22.html#SECTION04313000000000000000">Implementing parsers from parsing expression grammars</A>
-<LI><A NAME="tex2html1055"
-  HREF="node22.html#SECTION04314000000000000000">Referencias y Documentación</A>
+<LI><A NAME="tex2html1063"
+  HREF="node22.html#SECTION04314000000000000000">Lexical Analysis</A>
+<LI><A NAME="tex2html1064"
+  HREF="node22.html#SECTION04315000000000000000">Left recursion</A>
+<LI><A NAME="tex2html1065"
+  HREF="node22.html#SECTION04316000000000000000">Referencias y Documentación</A>
 </UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -130,7 +134,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3550"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3552"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3556"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3558"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -212,7 +216,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3554"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3560"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -354,7 +358,7 @@ Implementing parsers from parsing expression grammars</A>
 </H2>
 
 <P>
-Any parsing expression grammar can be converted directly into a <A NAME="3556"></A><SPAN  CLASS="textit">recursive descent parser</SPAN>. 
+Any parsing expression grammar can be converted directly into a <A NAME="3562"></A><SPAN  CLASS="textit">recursive descent parser</SPAN>. 
 
 <P>
 Due to the unlimited lookahead capability that the grammar formalism
@@ -405,6 +409,46 @@ using parsing expression grammars can be parsed by LL or LR parsers.
 <P>
 
 <H2><A NAME="SECTION04314000000000000000">
+Lexical Analysis</A>
+</H2>
+
+<P>
+Parsers for languages expressed as a CFG, such as LR parsers, require a
+separate tokenization step to be done first, which breaks up the input
+based on the location of spaces, punctuation, etc. 
+
+<P>
+The tokenization is
+necessary because of the way these parsers use lookahead to parse CFGs
+that meet certain requirements in linear time. 
+
+<P>
+PEGs do
+not require tokenization to be a separate step, and tokenization rules
+can be written in the same way as any other grammar rule.
+
+<P>
+
+<H2><A NAME="SECTION04315000000000000000">
+Left recursion</A>
+</H2>
+
+<P>
+PEGs cannot express left-recursive rules where a rule refers to itself
+without moving forward in the string. 
+ For example, the following left-recursive CFG rule:
+<PRE>
+string-of-a -&gt; string-of-a 'a' | 'a'
+</PRE>
+can be rewritten in a PEG using the plus operator:
+<PRE>
+string-of-a &lt;- 'a'+
+</PRE>
+The process of rewriting indirectly left-recursive rules is complex in some packrat parsers, especially when semantic actions are involved.
+
+<P>
+
+<H2><A NAME="SECTION04316000000000000000">
 Referencias y Documentación</A>
 </H2>
 
@@ -441,19 +485,19 @@ Véanse [<A
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1050"
+<A NAME="tex2html1058"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1044"
+<A NAME="tex2html1052"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1038"
+<A NAME="tex2html1046"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1046"
+<A NAME="tex2html1054"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1048"
+<A NAME="tex2html1056"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -505,11 +549,11 @@ Véanse [<A
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1051"
+<B> Sig:</B> <A NAME="tex2html1059"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1045"
+<B>Sup:</B> <A NAME="tex2html1053"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1039"
+<B> Ant:</B> <A NAME="tex2html1047"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 </DIV>
 <!--End of Navigation Panel-->
