--- a/node203.html
+++ b/node203.html
@@ -145,7 +145,7 @@ OmniAuth gem: Standardized Multi-Provider Authentication for Ruby</A>
 
 <P>
 OmniAuth is a library that standardizes multi-provider authentication
-for web applications. Any developer can create <A NAME="22460"></A><SPAN  CLASS="textbf">strategies</SPAN> for
+for web applications. Any developer can create <A NAME="22462"></A><SPAN  CLASS="textbf">strategies</SPAN> for
 OmniAuth that can
 authenticate users via disparate systems. 
 
@@ -197,6 +197,26 @@ example, a callback might look something like this:
   send(method, "/auth/:provider/callback") do
     env['omniauth.auth'] # =&gt; OmniAuth::AuthHash
   end
+end
+</PRE>
+
+<P>
+Also of note, by default, if user authentication fails on the provider
+side, OmniAuth will catch the response and then redirect the request
+to the path <code>/auth/failure</code>,
+ passing a corresponding error message in a
+parameter named <code>message</code>. 
+
+<P>
+You may want to add an action to catch these
+cases. Continuing with the previous Sinatra example, you could add an
+action like this:
+
+<P>
+<PRE>
+get '/auth/failure' do
+  flash[:notice] = params[:message] # if using sinatra-flash or rack-flash
+  redirect '/'
 end
 </PRE>
 
